# CrossCraft-Indev

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ELoop.hpp  GameState.cpp  GameState.hpp  GameStateInput.cpp  ModelRenderer.cpp  ModelRenderer.hpp  ResourcePack.cpp  ResourcePack.hpp  main.cpp
src/Chunk/: ChunkMesh.cpp  ChunkMesh.hpp  ChunkMeta.cpp  ChunkMeta.hpp  ChunkStack.cpp  ChunkStack.hpp  ChunkUtil.hpp  FaceConst.hpp  Frustum.cpp  Frustum.hpp
src/Debug/: OptimizerState.cpp  OptimizerState.hpp
src/Entity/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  ItemEntity.cpp  ItemEntity.hpp
src/Player/: Crafting.cpp  Crafting.hpp  Hud.cpp  Hud.hpp  InGameMenu.cpp  InGameMenu.hpp  Inventory.cpp  Inventory.hpp  Player.cpp  Player.hpp  PlayerInputs.cpp
src/UI/: FontRender.cpp  FontRender.hpp
src/World/: Sky.cpp  Sky.hpp  World.cpp  World.hpp  WorldTime.hpp
